--- a/src/Components/ItemModal/ItemModal.css
+++ b/src/Components/ItemModal/ItemModal.css
@@ -19,6 +19,6 @@
   width: 100%;
 }
 
-.modal__close {
-  background: center no-repeat url(../../Images/modalclosewhite.png);
+.modal__container_type_image .modal__close {
+  background-image: url(../../Images/modalclosewhite.png);
 }
