review ready update

--- a/src/Components/ItemModal/ItemModal.css
+++ b/src/Components/ItemModal/ItemModal.css
@@ -20,5 +20,5 @@
 }
 
 .modal__container_type_image .modal__close {
-  background-image: url(../../Images/modalclosewhite.png);
+  background-image: url(../../images/modalclosewhite.png);
 }
