--- a/src/Components/ModalWithForm/ModalWithForm.css
+++ b/src/Components/ModalWithForm/ModalWithForm.css
@@ -32,7 +32,7 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  background: center no-repeat url(../../Images/modalclose.png);
+  background: center no-repeat url(../../images/modalclose.png);
   width: 16px;
   height: 16px;
   border: none;
