--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -33,6 +33,7 @@
   top: 20px;
   right: 20px;
   background: center no-repeat url(../../images/modalclose.png);
+  cursor: pointer;
   width: 16px;
   height: 16px;
   border: none;
@@ -79,6 +80,7 @@
   margin-top: 32px;
   border-radius: 4px;
   transition: opacity 0.4s linear;
+  cursor: pointer;
 }
 
 .modal__submit:hover {
