toggle update for now

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,8 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 32px 0 28px;
+  padding: 20px 0 20px;
+  font-size: 20px;
 }
 
 .header__image {
@@ -36,4 +37,10 @@
 
 .header__username {
   margin: 0;
+}
+
+.header__switch-container {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
 }
