--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,11 @@
   font-size: 20px;
 }
 
+.header__link {
+  text-decoration: none;
+  color: #000000;
+}
+
 .header__image {
   margin-right: 24px;
 }
