--- a/src/components/ProfileEditModal/ProfileEditModal.css
+++ b/src/components/ProfileEditModal/ProfileEditModal.css
@@ -69,3 +69,23 @@
 .profile-avatar___label {
   margin-bottom: 8px;
 }
+
+.profile-edit-modal .modal__submit {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px;
+  margin-top: 32px;
+}
+
+.profile-edit-modal .modal__submit:hover {
+  background-color: #333;
+}
+
+.profile-edit-modal .modal__submit:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
